fixed homepage bug with z-index

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -46,14 +46,17 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
-  z-index: 30;
+
   position: relative;
 }
-
+nav > a {
+  z-index: 5;
+}
 .nav-middle {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 25px;
+  z-index: 5;
 }
 .nav-middle a {
   font-size: var(--overline-size);
@@ -69,6 +72,7 @@ nav {
 .cart-button {
   background-color: transparent;
   border: none;
+  z-index: 5;
 }
 .cart-button:hover {
   cursor: pointer;
@@ -77,6 +81,7 @@ nav {
   background-color: transparent;
   border: none;
   display: none;
+  z-index: 5;
 }
 .hamburger-button:hover {
   cursor: pointer;
@@ -90,6 +95,7 @@ nav {
   max-height: 1000px;
   width: 100%;
   left: 0px;
+  z-index: 5;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   display: none;
@@ -98,7 +104,6 @@ nav {
   justify-content: center;
   padding: 0px var(--left-right-body-gutter);
   transition: transform 0.4s ease-in-out;
-  z-index: 40;
 }
 .mobile-menu > div {
   display: flex;
@@ -152,13 +157,13 @@ nav {
 
 .black-mask-nav {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 100px);
   background-color: rgb(0, 0, 0, 0.6);
   position: absolute;
   top: 0px;
   display: none;
   left: 0px;
-  z-index: 10;
+  z-index: 3;
 }
 @media screen and (min-width: 768px) and (max-width: 1439px) {
   .nav-middle {
