--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -54,11 +54,11 @@
 }
 .cart-mask {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 100px);
   background-color: rgb(0, 0, 0, 0.6);
   position: absolute;
   top: 0px;
   display: initial;
   left: 0px;
-  z-index: 10;
+  z-index: 3;
 }
